Fixed flexbox wrapping bug
When the viewport was made smaller flexbox
wrapped items as expected but gap was not
even. Set align-align content to fix this.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,7 @@
+* {border: 1px solid red;}
+
 html, body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
 }
 
@@ -8,7 +10,6 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
-  height: 100vh;
 }
 
 img {
@@ -19,6 +20,7 @@ img {
 .container {
   display: flex;
   justify-content: center;
+  align-content: flex-start;
   gap: 52px;
   flex-wrap: wrap;
   flex: 1;
